--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -21,7 +21,7 @@
               <span>Giá: </span> 12,000 VND
             </div>
             <a href="#" class="btn btn-primary" role="button">Xem chi tiết</a> 
-            <a href="/add-to-cart/{{ ObjectId(this._id) }}" class="btn btn-default" role="button">Thêm vào giỏ hàng</a>
+            <a href="/add-to-cart/{{this._id}}" class="btn btn-default" role="button">Thêm vào giỏ hàng</a>
           </div>
         </div>
       </div>
